rocket-db/core/codegen/tests/ui-fail-stable/route-type-errors.stderr
error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
 --> $DIR/route-type-errors.rs:6:12
  |
6 | fn f0(foo: Q) {}
  |            ^ the trait `FromParam<'_>` is not implemented for `Q`
  |
  = note: required by `from_param`

error[E0277]: the trait bound `Q: FromSegments<'_>` is not satisfied
 --> $DIR/route-type-errors.rs:9:12
  |
9 | fn f1(foo: Q) {}
  |            ^ the trait `FromSegments<'_>` is not implemented for `Q`
  |
  = note: required by `from_segments`

error[E0277]: the trait bound `Q: FromFormField<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:12:12
   |
12 | fn f2(foo: Q) {}
   |            ^ the trait `FromFormField<'_>` is not implemented for `Q`
   |
   = note: required because of the requirements on the impl of `FromForm<'_>` for `Q`

error[E0277]: the trait bound `Q: FromFormField<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:15:12
   |
15 | fn f3(foo: Q) {}
   |            ^ the trait `FromFormField<'_>` is not implemented for `Q`
   |
   = note: required because of the requirements on the impl of `FromForm<'_>` for `Q`

error[E0277]: the trait bound `Q: FromData<'_>` is not satisfied
   --> $DIR/route-type-errors.rs:18:12
    |
18  | fn f4(foo: Q) {}
    |            ^ the trait `FromData<'_>` is not implemented for `Q`
    |
   ::: $WORKSPACE/core/lib/src/data/from_data.rs
    |
    |     async fn from_data(req: &'r Request<'_>, data: Data<'r>) -> Outcome<'r, Self>;
    |                                         -- required by this bound in `rocket::data::FromData::from_data`

error[E0277]: the trait bound `Q: FromRequest<'_>` is not satisfied
   --> $DIR/route-type-errors.rs:21:10
    |
21  | fn f5(a: Q, foo: Q) {}
    |          ^ the trait `FromRequest<'_>` is not implemented for `Q`
    |
   ::: $WORKSPACE/core/lib/src/request/from_request.rs
    |
    |     async fn from_request(request: &'r Request<'_>) -> Outcome<Self, Self::Error>;
    |                                                -- required by this bound in `from_request`

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:21:18
   |
21 | fn f5(a: Q, foo: Q) {}
   |                  ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = note: required by `from_param`

error[E0277]: the trait bound `Q: FromRequest<'_>` is not satisfied
   --> $DIR/route-type-errors.rs:24:10
    |
24  | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
    |          ^ the trait `FromRequest<'_>` is not implemented for `Q`
    |
   ::: $WORKSPACE/core/lib/src/request/from_request.rs
    |
    |     async fn from_request(request: &'r Request<'_>) -> Outcome<Self, Self::Error>;
    |                                                -- required by this bound in `from_request`

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:24:18
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |                  ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = note: required by `from_param`

error[E0277]: the trait bound `Q: FromParam<'_>` is not satisfied
  --> $DIR/route-type-errors.rs:24:39
   |
24 | fn f6(a: Q, foo: Q, good: usize, bar: Q) {}
   |                                       ^ the trait `FromParam<'_>` is not implemented for `Q`
   |
   = note: required by `from_param`
